refactor: Apply OpenRewrite for migration to Java 21